<resources>
    <string name="app_name">taskcv</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">fullname</string>
    <string name="age">age</string>
    <string name="email">email</string>
    <string name="gender">Gender</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="next">next</string>
    <string name="flutter">Flutter</string>
    <string name="ios">iOS</string>
    <string name="android">Android</string>
    <string name="skills">Skills</string>
    <string name="languages">Languages</string>
    <string name="arabic">Arabic</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="music">Music</string>
    <string name="sports">Sports</string>
    <string name="games">Games</string>
    <string name="dummy_text">dummy text</string>
    <string name="hobbies">Hobbies :</string>
    <string name="languages_">Languages :</string>
    <string name="flutter_skill">Flutter Skill :</string>
    <string name="ios_skill">iOS Skill :</string>
    <string name="android_skill">Android Skill :</string>
    <string name="gender_">Gender :</string>
    <string name="age_">Age :</string>
    <string name="email_">Email :</string>
    <string name="name">Name :</string>
</resources>